--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <main>
+      <h2>Ứng dụng tính lãi kép</h2>
       <div class="content">
         <input id="1" type="number" placeholder="vốn" />
-        <input id="2" type="number" placeholder="phần trăm lãi " />
-        <input id="3" type="number" placeholder="số lần tính lãi 1 năm" />
+        <input id="2" type="number" placeholder="phần trăm lãi" />
+        <input id="3" type="number" placeholder="số lần tính lãi trong 1 năm" />
         <input id="4" type="number" placeholder="số năm đầu tư" />
         <button id="check">kiểm tra</button>
         <p id="result"></p>
-        <p id="note"></p>
       </div>
     </main>
   </body>
