--- a/index.html
+++ b/index.html
@@ -9,14 +9,29 @@
   </head>
   <body>
     <main>
-      <h2>Ứng dụng tính lãi kép</h2>
-      <div class="content">
-        <input id="1" type="number" placeholder="vốn" />
-        <input id="2" type="number" placeholder="phần trăm lãi" />
-        <input id="3" type="number" placeholder="số lần tính lãi trong 1 năm" />
-        <input id="4" type="number" placeholder="số năm đầu tư" />
-        <button id="check">kiểm tra</button>
-        <p id="result"></p>
+      <div class="container">
+        <div class="content">
+          <h2>Ứng dụng tính lãi kép</h2>
+          <input id="1" type="number" placeholder="vốn" />
+          <input id="2" type="number" placeholder="phần trăm lãi" />
+          <input
+            id="3"
+            type="number"
+            placeholder="số lần tính lãi trong 1 năm"
+          />
+          <input id="4" type="number" placeholder="số năm đầu tư" />
+          <button id="check">kiểm tra</button>
+          <p id="result"></p>
+        </div>
+        <div class="content">
+          <h2>lãi thường</h2>
+          <input id="5" type="number" placeholder="vốn" />
+          <input id="6" type="number" placeholder="phần trăm lãi" />
+          <input id="7" type="number" placeholder="kỳ hạn" />
+          <input id="8" type="number" placeholder="số năm đầu tư" />
+          <button id="check2">kiểm tra</button>
+          <p id="result2"></p>
+        </div>
       </div>
     </main>
   </body>
