--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <main>
       <div class="container">
-        <div class="content">
-          <h2>Ứng dụng tính lãi kép</h2>
+        <div id="content">
+          <h2>lãi kép</h2>
           <input id="1" type="number" placeholder="vốn" />
           <input id="2" type="number" placeholder="phần trăm lãi" />
           <input
@@ -21,16 +21,16 @@
           />
           <input id="4" type="number" placeholder="số năm đầu tư" />
           <button id="check">kiểm tra</button>
-          <p id="result"></p>
+          <!-- <p id="result"></p> -->
         </div>
-        <div class="content">
+        <div id="content2">
           <h2>lãi thường</h2>
           <input id="5" type="number" placeholder="vốn" />
           <input id="6" type="number" placeholder="phần trăm lãi" />
           <input id="7" type="number" placeholder="kỳ hạn" />
           <input id="8" type="number" placeholder="số năm đầu tư" />
           <button id="check2">kiểm tra</button>
-          <p id="result2"></p>
+          <!-- <p id="result2"></p> -->
         </div>
       </div>
     </main>
